@startuml MealPrep Database Schema

' ============= CORE USER & AUTH =============
entity "AppRole" as role {
  * id : uuid <<PK>>
  --
  * name : varchar(50)
}

entity "AppUser" as user {
  * id : uuid <<PK>>
  --
  * email : varchar(256) <<unique>>
  * full_name : varchar(500)
  * password_hash : varchar(255)
  * gender : int
  * age : int
  * avatar_url : varchar(500)
  phone_number : varchar(20)
  * created_at_utc : timestamp
  last_login_at_utc : timestamp
  * is_active : boolean
  * role_id : uuid <<FK>>
}

entity "OtpCode" as otp {
  * id : uuid <<PK>>
  --
  * email : text
  * code : text
  * created_at : timestamp
  * expires_at : timestamp
  * is_used : boolean
}

' ============= PLAN & PRICING =============
entity "Plan" as plan {
  * id : int <<PK>>
  --
  * name : varchar(100) <<unique>>
  description : varchar(500)
  * duration_days : int
  * base_price : decimal(10,2)
  * is_active : boolean
  * created_at : timestamp
}

entity "PlanMealTier" as tier {
  * id : int <<PK>>
  --
  * plan_id : int <<FK>>
  * meals_per_day : int [1-3]
  * extra_price : decimal(10,2)
  * is_active : boolean
  * created_at : timestamp
  --
  <<unique>> (plan_id, meals_per_day)
}

' ============= SUBSCRIPTION & PAYMENT =============
entity "Subscription" as sub {
  * id : int <<PK>>
  --
  * app_user_id : uuid <<FK>>
  * plan_id : int <<FK>>
  * customer_name : varchar(80)
  * customer_email : varchar(120)
  * meals_per_day : int [1-3]
  * start_date : date
  end_date : date
  * status : int
    0=PendingPayment
    1=Active
    2=Paused
    3=Cancelled
    4=Expired
  * total_amount : decimal(10,2)
  * auto_renew : boolean
  * created_at : timestamp
  updated_at : timestamp
}

entity "Payment" as payment {
  * id : int <<PK>>
  --
  * app_user_id : uuid <<FK>>
  * subscription_id : int <<FK>>
  * amount : decimal(10,2)
  * currency : varchar(10)
  * method : varchar(50)
  * status : varchar(50)
  * payment_code : varchar(100) <<unique>>
  description : varchar(500)
  * created_at : timestamp
  paid_at : timestamp
  expired_at : timestamp
}

entity "PaymentTransaction" as tx {
  * id : int <<PK>>
  --
  * payment_id : int <<FK>>
  * gateway : varchar(50)
  request_id : varchar(200)
  order_id : varchar(200)
  response_code : varchar(50)
  response_message : varchar(500)
  raw_response_json : text
  * created_at : timestamp
}

' ============= DELIVERY SYSTEM (NEW) =============
entity "DeliverySlot" as slot {
  * id : int <<PK>>
  --
  * name : varchar(80)
  * capacity : int
  * is_active : boolean
}

entity "DeliveryOrder" as dorder {
  * id : int <<PK>>
  --
  * subscription_id : int <<FK>>
  * delivery_date : date
  delivery_slot_id : int <<FK>>
  * status : int
    0=Planned
    1=Preparing
    2=Delivering
    3=Delivered
    4=Skipped
    5=Cancelled
  * total_amount : decimal(10,2)
  note : varchar(1000)
  * created_at : timestamp
  updated_at : timestamp
}

entity "DeliveryOrderItem" as ditem {
  * id : int <<PK>>
  --
  * delivery_order_id : int <<FK>>
  meal_id : int <<FK>>
  * meal_name_snapshot : varchar(255)
  meal_type : varchar(50)
  * quantity : int
  * unit_price : decimal(10,2)
  * created_at : timestamp
}

' ============= ORDER SYSTEM (LEGACY) =============
entity "Order" as order {
  * id : int <<PK>>
  --
  * app_user_id : uuid <<FK>>
  * subscription_id : int <<FK>>
  * delivery_date : date
  * delivery_slot_id : int <<FK>>
  * status : int
}

entity "OrderItem" as item {
  * id : int <<PK>>
  --
  * order_id : int <<FK>>
  * meal_id : int <<FK>>
  * quantity : int
}

' ============= MEAL SYSTEM =============
entity "Meal" as meal {
  * id : int <<PK>>
  --
  * name : varchar(255)
  * ingredients : text[]
  * images : text[]
  description : varchar(10000)
  * calories : int
  * protein : decimal(5,2)
  * carbs : decimal(5,2)
  * fat : decimal(5,2)
  * base_price : decimal(10,2)
  * is_active : boolean
  * created_at : timestamp
  updated_at : timestamp
}

entity "WeeklyMenu" as menu {
  * id : int <<PK>>
  --
  created_by_user_id : uuid <<FK>>
  * week_start : date
  * week_end : date
}

entity "WeeklyMenuItem" as mitem {
  * id : int <<PK>>
  --
  * weekly_menu_id : int <<FK>>
  * meal_id : int <<FK>>
  * day_of_week : int
}

' ============= NUTRITION TRACKING =============
entity "NutritionLog" as nlog {
  * id : int <<PK>>
  --
  * app_user_id : uuid <<FK>>
  * customer_email : varchar(120)
  * date : date
  * meal_id : int <<FK>>
  * quantity : int
}

entity "UserNutritionProfile" as profile {
  * id : int <<PK>>
  --
  * app_user_id : uuid <<FK>> <<unique>>
  * height_cm : int
  * weight_kg : decimal(5,2)
  * goal : int
  * activity_level : int
  * diet_preference : int
  * meals_per_day : int
  * daily_budget : decimal(10,2)
  notes : varchar(10000)
}

entity "UserAllergy" as allergy {
  * id : int <<PK>>
  --
  * user_nutrition_profile_id : int <<FK>>
  * allergy_name : varchar(50)
}

entity "UserDislikedMeal" as dislike {
  * id : int <<PK>>
  --
  * app_user_id : uuid <<FK>>
  * meal_id : int <<FK>>
  --
  <<unique>> (app_user_id, meal_id)
}

' ============= RELATIONSHIPS =============

' User & Role
role ||--o{ user : "has many"

' Plan & Pricing
plan ||--o{ tier : "has tiers"
plan ||--o{ sub : "used in"

' Subscription
user ||--o{ sub : "subscribes to"
sub ||--o{ dorder : "generates"
sub ||--o{ order : "generates (legacy)"
sub ||--o{ payment : "requires"

' Payment
user ||--o{ payment : "makes"
payment ||--o{ tx : "logged via"

' Delivery (NEW)
slot ||--o{ dorder : "scheduled in"
dorder ||--o{ ditem : "contains"
meal ||--o{ ditem : "delivered as"

' Order (LEGACY)
user ||--o{ order : "places"
slot ||--o{ order : "delivered in"
order ||--o{ item : "contains"
meal ||--o{ item : "ordered"

' Menu System
user ||--o{ menu : "creates"
menu ||--o{ mitem : "includes"
meal ||--o{ mitem : "featured in"

' Nutrition
user ||--o{ nlog : "tracks"
meal ||--o{ nlog : "logged as"
user ||--|| profile : "has profile"
profile ||--o{ allergy : "has allergies"
user ||--o{ dislike : "dislikes"
meal ||--o{ dislike : "disliked by"

@enduml
